# JissenRustProgrammingNyuumonExample

./: Cargo.toml  Dockerfile  Makefile  README
migrations/2020-08-19-090000_todo/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
templates/: index.html
