[package]
name = "todo"
version = "0.1.0"
authors = ["Naoaki Iwakiri <naokiri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.1"
actix-rt = "1.1.1"
thiserror = "1.0.20"
askama = "0.10.3"
diesel = { version = "*", features = ["sqlite", "r2d2"] }
serde = { version = "1", features = ["derive"] }


